spec/grammar_v1.ebnf
Item = FnDecl
    | StructDecl
    | ConstDecl
    | EnumDecl ;

Statement = VarDecl
            | ExprStmt
            | ';' ;

Expression = ExpressionWithBlock
            | ExpressionWithoutBlock;

ExpressionWithoutBlock = LiteralExpression
                        | InfixExpression
                        | PrefixExpression
                        | AssignmentExpression
                        | GroupExpression
                        | ArrayExpression
                        | IndexExpression
                        | StructExpression
                        | CallExpression
                        | ReturnExpression
                        | BreakExpression
                        | ContinueExpression ;

ExpressionWithBlock = BlockExpression
                    | LoopExpression
                    | IfExpression ;

# Function declarations
FnDecl = "fn" ident ParamList BlockStmt ;
ParamList = '(' FnParams ')';
FnParams = ident (',' ident)* ','? ;

# Variable declarations
VarDecl = "let" ident ( "=" Expr )? ";" ;

ExprStmt = ExprMaybeSemi ';'? | ExprSemi ';' ;

Expr = ExprMaybeSemi | ExprSemi ;

# Expressions that are optionally terminated by a semicolon to form an expression statement
ExprMaybeSemi = IfExpr
                | WhileExpr
                | BlockExpr ;

# Expressions that must be terminated by a semicolon to form an expression statement
ExprSemi = ident 
            | string
            | bool
            | number
            | InfixExpr
            | PrefixExpr
            | GroupExpr 
            | ReturnExpr ;

InfixExpr = Expr BinOp Expr ;
BinOp = '+' | '-' | '/' | '*' | "==" | '>' | ">=" | '<' | "<=" | "!=" | "=" ;

PrefixExpr = UnaryOp Expr ;
UnaryOp = '-' | '!' ;

GroupExpr = '(' Expr? ')' ;

IfExpr = "if" Expr BlockExpr ( "else"? ( IfExpr | BlockExpr ) )? ;
WhileExpr = "while" Expr BlockExpr ;
ReturnExpr = "return" Expr? ;

# Blocks.
# In Haze, block statements and expressions are not syntatically different but are differentiated 
# when used in non-expression constructs(See "FnDecl")
BlockStmt = BlockExpr ;
BlockExpr = '{' Statement* '}' ;
